# cam-head-tracker

./: .editorconfig  .geminiignore  .gitattributes  .gitignore  AGENTS.md  NOTICE.txt  README.md  build.spec  pyproject.toml  repomix.config.json
.gemini/: settings.json
.gemini/commands/: refactor.toml
.gemini/skills/code-reviewer/: SKILL.md
.gemini/skills/doc-reviewer/: SKILL.md
.gemini/skills/issue-creator/: SKILL.md
.gemini/skills/pr-creator/: SKILL.md
.gemini/skills/release-creator/: SKILL.md
.github/: pull_request_template.md  release.yml
.github/workflows/: build-release.yml  ffmpeg-auto-build.yml  update-notice.yml
cam_head_tracker/: camera.py  frame_rate_counter.py  gui.py  main.py  pose_writer.py  tracker.py  udp_client.py
docs/: repomix-usage.md
ffmpeg-builder/: Dockerfile  LICENSE_FFMPEG.txt  build.sh  version
tests/: test_tracker.py
