[project]
name = "cam-head-tracker"
version = "0.1.0"
description = "Camera-based head tracking app"
requires-python = ">=3.13,<3.14"
dependencies = [
    "mediapipe>=0.10.31",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "pyinstaller>=6.17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120
