[project]
name = "cam-head-tracker"
version = "0.2.0"
description = "Camera-based head tracking app"
requires-python = ">=3.13,<3.14"
dependencies = [
    "mediapipe>=0.10.31",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.0",
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pip-licenses]
format = "plain-vertical"
with-license-file = "true"
no-license-path = "true"
ignore-packages = [
    "pip-licenses",
    "pyinstaller",
    "pytest",
    "ruff",
]
output-file = "NOTICE.txt"

[tool.pytest.ini_options]
pythonpath = ["."]
